--- a/samplerepo/CS101_Worksheets/RWorksheet_Condag#1.Rmd
+++ b/samplerepo/CS101_Worksheets/RWorksheet_Condag#1.Rmd
@@ -1,14 +1,112 @@
 ---
-title: "Worksheet 1"
+title: "RWorksheet_Condag#1"
 author: "Angel Blase Condag"
 date: "2024-09-04"
-output:
-  pdf_document: default
-    df_print: paged
+output: pdf_document
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE)
 ```
+
+1. AGE VECTOR
+```{r}
+age <- c(34, 28, 22, 36, 27, 18, 52, 39, 42, 29, 35, 31, 27, 22, 37, 34, 19, 20, 57, 49, 
+         50, 37, 46, 25, 17, 37, 42, 53, 41, 51, 35, 24, 33, 41)
+```
+a. Data Points
+```{r}
+   length(age)
+```
+b. Code and Output
+
+# Code:
+  length(age)
+  
+# Output:
+  34
+  
+  
+2. Reciprocal
+```{r}
+  reciprocal <- 1 / age
+  library("MASS")
+  fractions(reciprocal)
+```
+# Code:
+  reciprocal <- 1 / age
+  library("MASS")
+  fractions(reciprocal)
+  
+# Output:
+    1/34 1/28 1/22 1/36 1/27 1/18 1/52 1/39 1/42 1/29 1/35 1/31 1/27
+    1/22 1/37 1/34 1/19 1/20 1/57 1/49 1/50 1/37 1/46 1/25 1/17 1/37
+    1/42 1/53 1/41 1/51 1/35 1/24 1/33 1/41
+    
+    
+3. New Age
+```{r}
+  new_age <- c(age, 0, age)
+  print(new_age)
+```
+What happen to the new_age?
+
+    It prints all the numbers in the age vector, added zero after the last number,
+    and prints all the numbers in the age vector again.
+
+
+4. Sort
+```{r}
+  sort(age)
+```
+# Code:
+  sort(age)
+  
+# Output:
+  17 18 19 20 22 22 24 25 27 27 28 29 31 33 34 34 35 35 36 37
+  37 37 39 41 41 42 42 46 49 50 51 52 53 57
+  
+  
+5. Minimum and Maximum value
+```{r}
+  min(age)
+  max(age)
+```
+# Code:
+  min(age)
+  max(age)
+  
+# Output:
+  min = 17
+  max = 57
+ 
+  
+6. DATA VECTOR
+```{r}
+data <- c(2.4, 2.8, 2.1, 2.5, 2.4, 2.2, 2.5,
+2.3, 2.5, 2.3, 2.4, 2.7)
+```
+a. Data Points
+```{r}
+  length(data)
+```
+b. Code and Output
+
+# Code:
+  length(data)
+  
+# Output:
+  12
+  
+2. Double
+```{r}
+  double <- 2 * data
+  print(double)
+```
+What happen to the data?
+
+  The value of the decimals in the data vector doubled.
+
+8. Sequence
 
 
