--- a/samplerepo/CS101_Worksheets/RWorksheet_Condag#1.Rmd
+++ b/samplerepo/CS101_Worksheets/RWorksheet_Condag#1.Rmd
@@ -14,18 +14,10 @@ knitr::opts_chunk$set(echo = TRUE)
 age <- c(34, 28, 22, 36, 27, 18, 52, 39, 42, 29, 35, 31, 27, 22, 37, 34, 19, 20, 57, 49, 
          50, 37, 46, 25, 17, 37, 42, 53, 41, 51, 35, 24, 33, 41)
 ```
-a. Data Points
+Data Points
 ```{r}
    length(age)
 ```
-b. Code and Output
-
-# Code:
-  length(age)
-  
-# Output:
-  34
-  
   
 2. Reciprocal
 ```{r}
@@ -33,17 +25,7 @@ b. Code and Output
   library("MASS")
   fractions(reciprocal)
 ```
-# Code:
-  reciprocal <- 1 / age
-  library("MASS")
-  fractions(reciprocal)
-  
-# Output:
-    1/34 1/28 1/22 1/36 1/27 1/18 1/52 1/39 1/42 1/29 1/35 1/31 1/27
-    1/22 1/37 1/34 1/19 1/20 1/57 1/49 1/50 1/37 1/46 1/25 1/17 1/37
-    1/42 1/53 1/41 1/51 1/35 1/24 1/33 1/41
-    
-    
+
 3. New Age
 ```{r}
   new_age <- c(age, 0, age)
@@ -59,28 +41,13 @@ What happen to the new_age?
 ```{r}
   sort(age)
 ```
-# Code:
-  sort(age)
-  
-# Output:
-  17 18 19 20 22 22 24 25 27 27 28 29 31 33 34 34 35 35 36 37
-  37 37 39 41 41 42 42 46 49 50 51 52 53 57
-  
   
 5. Minimum and Maximum value
 ```{r}
   min(age)
   max(age)
 ```
-# Code:
-  min(age)
-  max(age)
-  
-# Output:
-  min = 17
-  max = 57
  
-  
 6. DATA VECTOR
 ```{r}
 data <- c(2.4, 2.8, 2.1, 2.5, 2.4, 2.2, 2.5,
@@ -90,13 +57,6 @@ a. Data Points
 ```{r}
   length(data)
 ```
-b. Code and Output
-
-# Code:
-  length(data)
-  
-# Output:
-  12
   
 2. Double
 ```{r}
@@ -109,4 +69,86 @@ What happen to the data?
 
 8. Sequence
 
+8.1 Integers from 1 to 100
+```{r}
+seq(1:100)
+```
+8.2 Numbers from 20 to 60
+```{r}
+seq(20,60)
+```
+8.3 Mean of numbers from 20 to 60
+```{r}
+mean(20:60)
+```
+8.4 Sum of numbers from 51 to 91
+```{r}
+sum(51:91)
+```
+8.5 Integers from1 to 1,000
+Code and Output from 8.1 to 8.4
+```{r}
+thousands <- seq(1:1000)
+thousands
+```
+a. Data Points from 8.1 to 8.4?
+```{r}
+length(seq) + length(mean) + length(sum)
+```
+
+
+c. Maximum Data Points until 10
+
+max 
+
+9. Filter
+```{r}
+Filter(function(i) { all(i %% c(3, 5, 7) != 0)}, seq(100))
+```
+
+10. Backwards of the integers from 1 to 100.
+```{r}
+backwards <- seq(100, 1)
+print(backwards)
+```
+
+
+11. Natural numbers below 25 that are multiples of 3 or 5.
+```{r}
+numbers <- 1:24
+multiples <- numbers[numbers %% 3 == 0 | numbers %% 5 == 0]
+print(multiples)
+sum_multiples <- sum(multiples)
+print(sum_multiples)
+```
+a. Data Points from 10 to 11
+```{r}
+
+```
+
+12. BLOCK
+```{r}
+#x <- {0 + x + 5 +}
+```
+
+13. SCORE VECTOR
+```{r}
+score <- c(71, 86, 92, 63, 88, 89, 91, 92, 75, 75, 77)
+score[2]
+score[3]
+```
+
+14. A VECTOR
+```{r}
+a <- c(1, 2, NA, 4, NA, 6, 7)
+print(a,na.print="-999")
+```
+
+15. A special type of function calls can appear on the left hand side of the assignment operator as in > class(x) <- "foo".
+```{r}
+name = readline(prompt="Input your name: ")
+age = readline(prompt="Input your age: ")
+print(paste("My name is",name, "and I am",age ,"years old."))
+print(R.version.string)
+```
 
