--- a/samplerepo/CS101_Worksheets/RWorksheet_Condag#1.Rmd
+++ b/samplerepo/CS101_Worksheets/RWorksheet_Condag#1.Rmd
@@ -14,78 +14,85 @@ knitr::opts_chunk$set(echo = TRUE)
 age <- c(34, 28, 22, 36, 27, 18, 52, 39, 42, 29, 35, 31, 27, 22, 37, 34, 19, 20, 57, 49, 
          50, 37, 46, 25, 17, 37, 42, 53, 41, 51, 35, 24, 33, 41)
 ```
-Data Points
+a. DATA POINTS
 ```{r}
    length(age)
 ```
+ 
   
-2. Reciprocal
+2. RECIPROCAL
 ```{r}
   reciprocal <- 1 / age
   library("MASS")
   fractions(reciprocal)
 ```
 
-3. New Age
+
+3. NEW AGE
 ```{r}
   new_age <- c(age, 0, age)
   print(new_age)
 ```
 What happen to the new_age?
 
-    It prints all the numbers in the age vector, added zero after the last number,
-    and prints all the numbers in the age vector again.
+    The new_age vector contains all the original values in the age vector, followed by a zero,
+    and then the original values of age vector again.
 
 
-4. Sort
+4. SORT
 ```{r}
   sort(age)
 ```
+ 
   
-5. Minimum and Maximum value
+5. MINIMUM AND MAXIMUM VALUE
 ```{r}
   min(age)
   max(age)
 ```
+ 
  
 6. DATA VECTOR
 ```{r}
 data <- c(2.4, 2.8, 2.1, 2.5, 2.4, 2.2, 2.5,
 2.3, 2.5, 2.3, 2.4, 2.7)
 ```
-a. Data Points
+a. DATA POINTS
 ```{r}
   length(data)
 ```
   
-2. Double
+  
+7. DOUBLE
 ```{r}
   double <- 2 * data
   print(double)
 ```
 What happen to the data?
 
-  The value of the decimals in the data vector doubled.
+  The value of the elements in the data vector doubled or should I say multiplied by 2.
 
-8. Sequence
 
+8. SEQUENCE, MEAN, SUM
 8.1 Integers from 1 to 100
 ```{r}
-hundred <- seq(1:100)
-hundred
+integers <- seq(1:100)
+print(integers)
 ```
 8.2 Numbers from 20 to 60
 ```{r}
-num <- seq(20,60)
-num
+numbers <- seq(20,60)
+print(numbers)
 ```
 8.3 Mean of numbers from 20 to 60
 ```{r}
-mean(20:60)
+mean <- mean(20:60)
+print(mean)
 ```
 8.4 Sum of numbers from 51 to 91
 ```{r}
-sum(51:91)
+sum <- sum(51:91)
+print(sum)
 ```
 8.5 Integers from 1 to 1,000
 Code and Output from 8.1 to 8.4
@@ -95,17 +102,20 @@ thousands
 ```
 a. Data Points from 8.1 to 8.4?
 ```{r}
-length(hundred) + length(mean) + length(sum)
+length(integers) + length(numbers) + length(mean) + length(sum)
 ```
 
-
 c. Maximum Data Points until 10
+```{r}
 max(thousands[thousands <- 10])
+```
+
 
 9. Filter
 ```{r}
 Filter(function(i) { all(i %% c(3, 5, 7) != 0)}, seq(100))
 ```
+
 
 10. Backwards of the integers from 1 to 100.
 ```{r}
@@ -122,15 +132,17 @@ print(multiples)
 sum_multiples <- sum(multiples)
 print(sum_multiples)
 ```
-a. Data Points from 10 to 11
-```{r}
+a. Data Points from 10 to 11:
+    11
 
-```
 
 12. BLOCK
 ```{r}
 #x <- {0 + x + 5 +}
 ```
+Describe the output: 
+  The r code turns out to be an error because the expression inside the curly braces is incomplete because it ends with a "+".
+
 
 13. SCORE VECTOR
 ```{r}
@@ -139,13 +151,17 @@ score[2]
 score[3]
 ```
 
+
 14. A VECTOR
 ```{r}
 a <- c(1, 2, NA, 4, NA, 6, 7)
 print(a,na.print="-999")
 ```
-
-15. A special type of function calls can appear on the left hand side of the assignment operator as in > class(x) <- "foo".
+Describe the output:
+  Each element in the vector is printed, and the NA values appear as "-999" in the output.
+  
+  
+15. SPECIAL FUNCTION
 ```{r}
 name = readline(prompt="Input your name: ")
 age = readline(prompt="Input your age: ")
