--- a/RWorksheet_Condag#2/RWorksheet_Condag#2.R.Rmd
+++ b/RWorksheet_Condag#2/RWorksheet_Condag#2.R.Rmd
@@ -24,7 +24,7 @@ x <- 1:7
 x
 ```
   What will be the value of x?
-  
+ 
        The value of x would be a sequence of numbers from 1 to 7.
        
 2. Create a vector using seq() function
@@ -36,3 +36,171 @@ seq2 <- seq(1, 3, by = 0.2)
 seq2
 ```
 The values between 1 and 3 are generated with each next value being 0.2 greater than the previous one.
+
+3.  A factory has a census of its workers. There are 50 workers in total.
+
+```{r}
+workers <- list(34, 28, 22, 36, 27, 18, 52, 39, 42, 29, 35, 31, 27, 22, 37, 34, 19, 20, 57, 49, 50,  37, 46, 25, 17, 37, 43, 53, 41, 51, 35, 24,33, 41, 53, 40, 18, 44, 38, 41, 48, 27, 39, 19, 30, 61, 54, 58, 26, 18)
+```
+
+a. Access 3rd element, what is the value?
+```{r}
+print(paste(workers[[3]], "is the value of the 3rd element"))
+```
+b. Access 2nd and 4th element, what are the values?
+```{r}
+print(paste(workers[[2]], "is the 2nd element and", workers[[4]], "is the 4th element"))
+```
+c. Access all but the 4th and 12th element is not included. Write the R script and its output.
+```{r}
+exclude <- workers[-c(4, 12)]
+exclude
+```
+
+4. Create a vector x <- c("first"=3, "second"=0, "third"=9). Then named the vector, names(x).
+```{r}
+x <- c("first" = 3, "second" = 0, "third" = 9)
+```
+a & b. Print the results. Then access x[c("first", "third")].
+```{r}
+x
+names(x)
+x[c("first", "third")]
+```
+First it outputs the elements of x. Then names(x) access and outputs only the names or string in the element. Lastly x[c("first", "third")] outputs the elements corresponding to first and third.
+x[c("first", "third")]
+
+5. Create a sequence x from -3:2.
+```{r}
+x <- c(-3:2)
+x
+```
+a & b. Modify 2nd element and change it to 0.
+```{r}
+x[2] <- 0
+x
+```
+It changes the 2nd element from -2 into 0
+
+6. Data was given showing the diesel fuel purchased by Mr. Cruz.
+
+
+  a. Create a data frame for month, price per liter (php) and purchase-quantity (liter).
+```{r}
+mrCruzdata <- data.frame(
+  Month = c("Jan", "Feb", "Mar", "Apr", "May", "Jun"),
+  Price_Per_Liter = c(52.50, 57.25, 60.00, 65.00, 74.25, 54.00),
+  Purchase_Quantity = c(25, 30, 40, 50, 10, 45))
+mrCruzdata
+```
+b. b. What is the average fuel expenditure of Mr. Cruz from Jan to June? Note: Use ‘weighted.mean(liter, purchase).
+```{r}
+avr_fuel <- weighted.mean(mrCruzdata$Price_Per_Liter, mrCruzdata$Purchase_Quantity)
+print(paste("Mr. Cruz avarage fuel expenditure is", avr_fuel))
+```
+
+7. R has actually lots of built-in datasets. For example, the rivers data “gives the lengths (in miles) of 141 “major” rivers in North America, as compiled by the US Geological Survey”.
+
+
+  a. Type “rivers” in your R console. Create a vector data with 7 elements, containing the number of elements (length) in rivers, their sum (sum), mean (mean), median(median), variance(var), standard deviation(sd), minimum (min) and maximum (max).
+
+This would be the output if "rivers" were typed in the R Console:
+```{r}
+rivers
+```
+b & c. R scripts and outputs. And result.
+```{r}
+data <- c(length(rivers), sum(rivers), mean(rivers), median(rivers), var(rivers), sd(rivers), min(rivers), max(rivers))
+datf <- data.frame(
+  DATA = c("Length", "Sum", "Mean", "Median", "Variance", "Std.Dvn.", "Minimum", "Maximum"),
+  VALUE = data
+)
+datf
+```
+The result would be that the data vector will access the rivers data sets and get its length, sum, mean, median, variance, standard deviation, its minimun and maximum.
+
+8. A table was given with the 25 most powerful celebrities and their annual pay as ranked by the editions of Forbes magazine and as listed on the Forbes.com website.
+
+
+  a. Create vectors according to the above table. Write the R scripts and its output.
+```{r}
+power_ranking <- c(1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25)
+
+celebrity_name <- c("Tom Cruise", "Rolling Stones", "Oprah Winfrey", "U2", "Tiger Woods", "Steven Spielberg", "Howard Stern", "50 Cent", "Cast of the Sopranos", "Dan Brown", "Bruce Springsteen", "Donald Trump", "Muhammad Ali", "Paul McCartney", "George Lucas", "Elton John", "David Letterman", "Phil Mickelson", "J.K. Rowling", "Bradd Pitt", "Peter Jackson", "Dr. Phil McGraw", "Jay Leno", "Celine Dion", "Kobe Bryant")
+
+pay <- c(67, 90, 225, 110, 90, 332, 302, 41, 52, 88, 55, 44, 55, 40, 233, 34, 40, 47, 75, 25, 39, 45, 32, 40, 31)
+
+power_ranking
+celebrity_name
+pay
+```
+b. Modify the power ranking and pay of J.K. Rowling. Change power ranking to 15 and pay to 90.
+```{r}
+celebrity_name[19] <- "J.K. Rowling"
+power_ranking[19] <- 15
+pay[19] <- 90
+
+power_ranking
+celebrity_name
+pay
+```
+c. Create an excel file from the table above and save it as csv file(PowerRanking). Import the csv file into the RStudio. What is the R script?
+```{r}
+
+```
+d. Access the rows 10 to 20 and save it as Ranks.RData. Write the R script and its output.
+```{r}
+
+```
+e. Describe its output
+
+
+9. Download the Hotels-Vienna https://tinyurl.com/Hotels-Vienna
+
+
+a. Import the excel file into your RStudio. What is the R script?
+```{r}
+
+```
+b. How many dimensions does the dataset have?
+```{r}
+
+```
+c. Select columns country, neighbourhood, price, stars, accomodation_type, and ratings.
+```{r}
+
+```
+d. Save the data as **new.RData to your RStudio.
+```{r}
+
+```
+e. Display the first six rows and last six rows of the new.RData.
+```{r}
+
+```
+
+
+10. Create a list of ten (10) vegetables you ate during your lifetime. If none, just list down.
+
+
+a. Write the R scripts and its output.
+```{r}
+veg <- list("Carrot", "Squash", "Cucumber", "Eggplant", "Cabbage", "Beans", "Potato", "Spinach", "Corn", "Peanuts")
+veg
+```
+
+b. Add 2 additional vegetables after the last vegetables in the list.
+```{r}
+veg <- append(veg, list("Broccoli", "Radish"))
+veg
+```
+c. Add 4 additional vegetables after index 5. How many datapoints does your vegetable list have?
+```{r}
+veg <- append(veg, list("Cauliflower", "Lettuce", "Celery", "Bell Peppers"), after = 5)
+veg
+```
+d. Remove the vegetables in index 5, 10, and 15. How many vegetables were left?
+```{r}
+veg <- veg[-c(5, 10, 15)]
+veg
+```
