--- a/RWorksheet_Condag#2/RWorksheet_Condag#2.R.Rmd
+++ b/RWorksheet_Condag#2/RWorksheet_Condag#2.R.Rmd
@@ -146,37 +146,42 @@ pay
 ```
 c. Create an excel file from the table above and save it as csv file(PowerRanking). Import the csv file into the RStudio. What is the R script?
 ```{r}
-
+forbes_data <- read.csv("PowerRanking.csv")
 ```
 d. Access the rows 10 to 20 and save it as Ranks.RData. Write the R script and its output.
 ```{r}
-
+ranks <- forbes_data[10:20, ]
+save(ranks, file = "Ranks.RData")
 ```
 e. Describe its output
 
+    The output table containing rows 10 to 20. This includes the celebrities ranked from 10th to 20th position, their names, and their corresponding pay, which is stored in the csv file.
 
 9. Download the Hotels-Vienna https://tinyurl.com/Hotels-Vienna
 
 
 a. Import the excel file into your RStudio. What is the R script?
 ```{r}
-
+library(openxlsx)
+vienna <- read.xlsx("hotels-vienna.xlsx")
 ```
 b. How many dimensions does the dataset have?
 ```{r}
-
+dim(vienna)
 ```
 c. Select columns country, neighbourhood, price, stars, accomodation_type, and ratings.
 ```{r}
-
+selcol <- vienna[, c("country", "neighbourhood", "price", "stars", "accommodation_type", "rating")]
 ```
 d. Save the data as **new.RData to your RStudio.
 ```{r}
-
+save(selcol, file = "new.RData")
 ```
 e. Display the first six rows and last six rows of the new.RData.
 ```{r}
-
+load("new.RData")
+head(selcol)
+tail(selcol)
 ```
 
 
