--- a/RWorksheet_Condag#3/RWorksheet_lastname#3a.Rmd
+++ b/RWorksheet_Condag#3/RWorksheet_lastname#3a.Rmd
@@ -96,3 +96,84 @@ lowest_temp <- city_temp[which.min(city_temp$Temperature), ]
 lowest_temp
 ```
 
+#USING MATRICES
+
+2. Create a matrix of one to eight and eleven to fourteen with four columns and three rows.
+
+a. What will be the R code for the #2 question and its result?
+```{r}
+matrixA <- matrix(c(1:8, 11:14), ncol = 4, nrow = 3)
+matrixA
+```
+
+b. Multiply the matrix by two. What is its R code and its result?
+```{r}
+matrixB <- matrixA * 2
+matrixB
+```
+
+c. What is the content of row 2? What is its R code?
+```{r}
+row_2 <- matrixA[2, ]
+row_2
+```
+
+d. What will be the R code if you want to display the column 3 and column 4 in row 1 and row 2? What is its output?
+```{r}
+cols_3_4_rows_1_2 <- matrixA[1:2, 3:4]
+cols_3_4_rows_1_2
+```
+
+e. What is the R code is you want to display only the columns in 2 and 3, row 3? What is its output?
+```{r}
+cols_2_3_row_3 <- matrixA[3, 2:3]
+cols_2_3_row_3
+```
+
+f. What is the R code is you want to display only the columns 4? What is its output?
+```{r}
+column_4 <- matrixA[, 4]
+column_4
+```
+
+g. Name the rows as isa, dalawa, tatlo and columns as uno, dos, tres, quatro for the matrix that was created in b.‘. What is its R code and corresponding output?
+```{r}
+rownames(matrixB) <- c("isa", "dalawa", "tatlo")
+colnames(matrixB) <- c("uno", "dos", "tres", "quatro")
+matrixB
+```
+
+h. From the original matrix you have created in a, reshape the matrix by assigning a new dimension with dim(). New dimensions should have 2 columns and 6 rows. What will be the R code and its output?
+```{r}
+dim(matrixA) <- c(6, 2)
+matrixA
+```
+
+#USING ARRAYS
+
+An array contains 1, 2, 3, 6, 7, 8, 9, 0, 3, 4, 5, 1
+
+a. Create an array for the above numeric values. Each values will be repeated twice. What will be the R code if you are to create a three-dimensional array with 4 columns and 2 rows. What will be its output?
+```{r}
+values <- rep(c(1, 2, 3, 6, 7, 8, 9, 0, 3, 4, 5, 1), times = 2)
+
+my_array <- array(values, dim = c(2, 4, 3))
+my_array
+```
+
+b. How many dimensions do your array have?
+```{r}
+num_dim <- length(dim(my_array))
+num_dim
+```
+
+c. Name the rows as lowercase letters and columns as uppercase letters starting from the A. The array names should be “1st-Dimensional Array”, “2nd-Dimensional Array”, and “3rd-Dimensional Array”. What will be the R codes and its output?
+```{r}
+dimnames(my_array) <- list(
+  c("a", "b"),           # Row names (lowercase letters)
+  c("A", "B", "C", "D"), # Column names (uppercase letters)
+  c("1st-Dimensional Array", "2nd-Dimensional Array", "3rd-Dimensional Array") # Dimension names
+)
+my_array
+```
+
